# elite-dangerous-rusty-assistant

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
elite-dangerous-journal-model/: Cargo.toml
elite-dangerous-journal-model/examples/: list_events.rs
elite-dangerous-journal-model/src/: events.rs  lib.rs  test_helper.rs
elite-dangerous-journal-model/src/events/: commander.rs  common.rs  engineer.rs  exploration.rs  file_header.rs  fss_signal_discovered.rs  game.rs  material.rs  music.rs  odyssey.rs  other.rs  progress.rs  rank.rs  reputation.rs  ship.rs  startup.rs  station_services.rs  trade.rs  travel.rs
elite-dangerous-journal-model/src/events/common/: system.rs
elite-dangerous-journal-model/src/events/exploration/: fss_all_bodies_found.rs  fss_body_signals.rs  fss_discovery_scan.rs  fss_signal_discovered.rs  material_collected.rs  scan.rs
elite-dangerous-journal-model/src/events/exploration/scan/: event.rs  helper.rs
elite-dangerous-journal-model/src/events/odyssey/: common.rs  ship_locker.rs
elite-dangerous-journal-model/src/events/other/: drone.rs  fuel_scoop.rs  music.rs  receive_text.rs  reservoir_replenished.rs
elite-dangerous-journal-model/src/events/scan/: common.rs  event.rs  helper.rs
elite-dangerous-journal-model/src/events/ship/: common.rs  fsd_target.rs
elite-dangerous-journal-model/src/events/startup/: cargo.rs  commander.rs  game.rs  material.rs
elite-dangerous-journal-model/src/events/station_services/: engineer.rs  missions.rs
elite-dangerous-journal-model/src/events/station_services/missions/: common.rs  mission_abandoned.rs  mission_accepted.rs  mission_completed.rs  mission_failed.rs  mission_redirected.rs
elite-dangerous-journal-model/src/events/station_services/missions/mission_completed/: components.rs
elite-dangerous-journal-model/src/events/trade/: mining.rs
elite-dangerous-journal-model/src/events/travel/: fsd_jump.rs  fsd_target.rs  start_jump.rs
elite-dangerous-journal-model/src/events/travel/fsd_jump/: fsd_jump_event.rs  star_position.rs
elite-dangerous-journal-watcher/: Cargo.toml
elite-dangerous-journal-watcher/examples/: file_watcher.rs  status_file_copier.rs
elite-dangerous-journal-watcher/src/: config.rs  elite_journal_watcher.rs  file_watcher.rs  lib.rs  processor.rs
elite-dangerous-journal-watcher/src/processor/: journal_file_processor.rs  log_event_processor.rs
elite-dangerous-rusty-assistant/: Cargo.toml
elite-dangerous-rusty-assistant-app/: Cargo.toml
elite-dangerous-rusty-assistant-app/src/: command_line.rs  defaulit_plugin.rs  lib.rs  main.rs  pirate_massacre_helper.rs
elite-dangerous-rusty-assistant-plugins/: Cargo.toml
elite-dangerous-rusty-assistant-plugins/src/: exobiology_assistant.rs  lib.rs  pirate_massacre_plugin.rs
elite-dangerous-rusty-assistant-plugins/src/exobiology_assistant/: event_processor.rs  model.rs
elite-dangerous-rusty-assistant-plugins/src/pirate_massacre_plugin/: event_processor.rs  model.rs
elite-dangerous-rusty-assistant-tui/: Cargo.toml
elite-dangerous-rusty-assistant/src/: components.rs  lib.rs  traits.rs
elite-dangerous-rusty-assistant/src/components/: pirate_massacre.rs
elite-dangerous-rusty-assistant/src/components/pirate_massacre/: component.rs  model.rs
elite-dangerous-rusty-tui/: .envrc  Cargo.toml  LICENSE  README.md
elite-dangerous-static-data/: Cargo.toml  README.md  build.rs
elite-dangerous-static-data-build-support/: Cargo.toml
elite-dangerous-static-data-build-support/src/: build.rs  lib.rs
elite-dangerous-static-data-build-support/src/types/: faction.rs
elite-dangerous-static-data/src/: faction_state.rs
