[workspace]
members = [
    "elite-dangerous-journal-model",
    "elite-dangerous-journal-watcher",
    "elite-dangerous-rusty-assistant-app",
    "elite-dangerous-rusty-assistant-plugins",
    "elite-dangerous-rusty-tui",
]
resolver = "2"

[workspace.dependencies]
chrono = "0.4"
directories = "6.0.0"
futures = "0.3"
lazy-regex = "3.0.0"
notify = "7"
notify-debouncer-full = "0.4.0"
serde_json = "1"
serde_repr = "0.1"
tracing = "0.1.0"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

[workspace.dependencies.clap]
version = "4.5.27"
features = ["derive"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.serde_with]
version = "3"
features = ["chrono"]

[workspace.dependencies.surrealdb]
version = "2.1.4"
features = ["kv-rocksdb"]

[workspace.dependencies.tokio]
version = "1.0.0"
features = [
    "rt",
    "rt-multi-thread",
    "macros",
]
