[workspace]
resolver = "2"
members = [ "elite-dangerous-journal-model", "elite-dangerous-journal-watcher", "elite-dangerous-rusty-assistant", "elite-dangerous-rusty-assistant-app"]


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1.0"
chrono = "0.4"
serde_with = {  version = "3", features = ["chrono"] }
serde_repr = "0.1"
serde_json = "1"
tracing-subscriber = "0.3.19"
notify-debouncer-full = "0.4.0"
notify = "7"
futures = "0.3"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy-regex = "3.0.0"
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0.0"
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
tracing-appender = "0.2.3"
