[package]
name = "elite-dangerous-journal-model"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = {workspace = true }
serde_with = {  version = "3", features = ["chrono"] }
serde_repr = {workspace = true }

[dev-dependencies]
serde_json = {workspace = true }
tracing-subscriber = {workspace = true }