[package]
name = "elite-dangerous-journal-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
notify-debouncer-full = "0.4.0"
notify = "7"
futures = "0.3"
tracing = "0.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"
elite-dangerous-journal-model = { path = "../elite-dangerous-journal-model"}

[dev-dependencies]
tokio = {  version = "1.42.0", features = ["full"] }
