[package]
name = "elite-dangerous-journal-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
notify-debouncer-full = {workspace = true }
notify = {workspace = true }
futures = {workspace = true }
tracing = { workspace = true }
tokio = { workspace = true , features = ["rt", "rt-multi-thread", "macros"] }
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true }
lazy-regex = {workspace = true }
elite-dangerous-journal-model = { path = "../elite-dangerous-journal-model"}

[dev-dependencies]
tokio = {  workspace = true , features = ["full"] }
