[package]
name = "edra"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = {workspace = true }
tokio = { workspace = true  , features = ["full"]}
tracing = { workspace = true }
tracing-subscriber = {workspace = true }
clap = { workspace = true, features = ["derive"] }
directories = {workspace = true }
elite-dangerous-journal-watcher = { path = "../elite-dangerous-journal-watcher"}
elite-dangerous-rusty-assistant-plugins = { path = "../elite-dangerous-rusty-assistant-plugins" }
surrealdb = { workspace = true, features = ["kv-rocksdb"] }
tracing-appender = {workspace = true }
