[package]
name = "edra"
version = "0.1.0"
edition = "2021"

[dependencies]
elite-dangerous-rusty-assistant = { path="../elite-dangerous-rusty-assistant"}
elite-dangerous-journal-watcher = { path="../elite-dangerous-journal-watcher"}
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true  , features = ["full"]}
directories = {workspace = true }
tracing = { workspace = true }
tracing-appender = {workspace = true }
tracing-subscriber = {workspace = true }