[package]
name = "elite-dangerous-rusty-assistant-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
elite-dangerous-journal-model = { path = "../elite-dangerous-journal-model"}
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
tracing = { workspace = true }
serde = {workspace = true, features = ["derive"] }